--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 <body>
 
     <!-- preloader area start -->
-    <div class="preloader" id="preloader">
+    <!-- <div class="preloader" id="preloader">
         <div class="preloader-inner">
             <div class="spinner">
                 <div class="dot1"></div>
                 <div class="dot2"></div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- preloader area end -->
 
     <!-- search Popup -->
@@ -237,7 +237,7 @@
                         <div class="col-xl-10 col-lg-10 offset-lg-2 offset-xl-1 col-md-8 offset-md-2">
                             <div class="banner-inner">
                                 <p data-animation-in="fadeInLeft">Entrena y divertete</p>
-                                <h1 class="title1" data-animation-in="fadeInDown">Entrenamiento personalizado</h1>
+                                <h1 class="title1" data-animation-in="fadeInDown">PASO A PASO</h1>
                             </div>
                         </div>
                     </div>
