--- a/index.html
+++ b/index.html
@@ -217,7 +217,9 @@
     <!-- banner start -->
     <div class="banner-area home-banner1">
         <div class="banner-slider banner-slider1">
-            <div class="banner-bg" style="background-image:url(assets/img/bg/1.png);">
+            <!-- <div class="banner-bg" style="background-image:url(assets/img/bg/1.png);"> -->
+            <div class="banner-bg" style="background-color: #000;"> 
+
                 <div class="container">
                     <div class="row h-100vh">
                         <div class="col-xl-10 col-lg-10 offset-lg-2 offset-xl-1 col-md-8 offset-md-2">
@@ -231,7 +233,8 @@
                     </div>
                 </div>
             </div>
-            <div class="banner-bg" style="background-image:url(assets/img/bg/2.png);">
+            <!-- <div class="banner-bg" style="background-image:url(assets/img/bg/2.png);"> -->
+                <div class="banner-bg" style="background-color: #000;"> 
                 <div class="container">
                     <div class="row h-100vh">
                         <div class="col-xl-10 col-lg-10 offset-lg-2 offset-xl-1 col-md-8 offset-md-2">
@@ -243,20 +246,22 @@
                     </div>
                 </div>
             </div>
-            <div class="banner-bg" style="background-image:url(assets/img/bg/3.png);">
+            <!-- <div class="banner-bg" style="background-image:url(assets/img/bg/3.png);"> -->
+                <div class="banner-bg" style="background-color: #000;"> 
                 <div class="container">
                     <div class="row h-100vh">
                         <div class="col-xl-10 col-lg-10 offset-lg-2 offset-xl-1 col-md-8 offset-md-2">
                             <div class="banner-inner">
-                                <p data-animation-in="fadeInLeft">Educa tu mente y cuerpo</p>
-                                <h1 class="title1" data-animation-in="fadeInDown">Clases en vivo</h1>
+                                <p data-animation-in="fadeInLeft">Clases en vivo</p>
+                                <h1 class="title1" data-animation-in="fadeInDown">Educa tu mente y cuerpo</h1>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             
-            <div class="banner-bg" style="background-image:url(assets/img/bg/05.jpg);">
+            <!-- <div class="banner-bg" style="background-image:url(assets/img/bg/05.jpg);"> -->
+                <div class="banner-bg" style="background-color: #000;"> 
                 <div class="container">
                     <div class="row h-100vh">
                         <div class="col-xl-10 col-lg-10 offset-lg-2 offset-xl-1 col-md-8 offset-md-2">
