--- a/index.html
+++ b/index.html
@@ -5,7 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pierde peso ahora </title>
+    
+    <title>Pierde peso ahora
+    Si no quieres tomar pastillas, toma decisiones</title>
+    <meta name="title" content="Entrena mente y cuerpo.
+    Si no quieres tomar pastillas, toma decisiones">
+    <meta name="description" content="Mentor en entrenamiento fisico y mental para perder peso y mantenerse en forma, libre de pastillas y dietas. ">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ckersciences.com/">
+    <meta property="og:title" content="Entrena mente y cuerpo.
+    Si no quieres tomar pastillas, toma decisiones">
+    <meta property="og:description" content="Mentor en entrenamiento fisico y mental para perder peso y mantenerse en forma, libre de pastillas y dietas. ">
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://ckersciences.com/">
+    <meta property="twitter:title" content="Entrena mente y cuerpo.
+    Si no quieres tomar pastillas, toma decisiones">
+    <meta property="twitter:description" content="Mentor en entrenamiento fisico y mental para perder peso y mantenerse en forma, libre de pastillas y dietas. ">
+    <meta property="twitter:image" content="">
+
      <!-- favicon -->
      <link rel=icon href="assets/img/favicon.png" sizes="20x20" type="image/png">
     <!-- animate -->
