--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property="twitter:image" content="">
 
      <!-- favicon -->
-     <link rel=icon href="assets/img/favicon.png" sizes="20x20" type="image/png">
+     <link rel=icon href="assets/img/favicon.ico" sizes="20x20" type="image/ico">
     <!-- animate -->
     <link rel="stylesheet" href="assets/css/animate.css">
     <!-- bootstrap -->
