--- a/index.html
+++ b/index.html
@@ -227,7 +227,11 @@
                     <div class="discovery-video margin-bottom-25">
                         <div class="video-content">
                             <div class="btn-wrapper desktop-center">
-                                <a href="index.html#" class="btn video-btn"><i class="fa fa-play text-left"></i></a>
+                                <a href="https://knov6250.wistia.com/medias/lrvju8jegm" class="btn video-btn">
+
+                                    <i class="fa fa-play text-left"></i>
+
+                                </a>
                             </div>
                         </div>
                         <h1 class="page-title">Masterclass</h1>
