--- a/index.html
+++ b/index.html
@@ -379,7 +379,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center discovery-title">
-                    <p class="title" style="font-size: 40px;">Tenemos la solución a esta situación</p>
+                    <p class="title" style="font-size: 100px;
+      font-weight: 900;
+      margin-bottom: 58px;
+      line-height: 100px;">Tenemos la solución a esta situación</p>
                  
                 </div>
             </div>
@@ -426,7 +429,7 @@
                 </div>
             </div>
             <!-- Swiper -->
-            <div class="row">
+            <!-- <div class="row">
                 <div class="swiper-slider swiper-container two">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide image-overlay">
@@ -439,7 +442,7 @@
                                         <i class="flaticon-settings"></i>
                                     </a>
                                 </div>
-                                <span>Expert</span>
+                                <span>La verdad el entrenar contigo me ayudo a superar muchos aspectos sobre mi personalidad, quizás de no haber dado el paso no me habria superado</span>
                                 <a href="#" class="btn btn-style-2">See offer</a>
                             </div>
                         </div>
@@ -503,10 +506,144 @@
                     </div>
                     <div class="swiper-button-next"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
                     <div class="swiper-button-prev"><i class="fa fa-angle-left" aria-hidden="true"></i></div>
-                    <!-- Add Pagination -->
                     <div class="swiper-pagination"></div>
                 </div>
+            </div> -->
+
+             <div class="customer-area">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="content">
+                        <h1>Testimonios</h1>
+                        <ul class="quote-image-menu d-none d-lg-block">
+                            <li><img src="assets/img/quote/1.png" alt="Quote image"></li>
+                            <li><img src="assets/img/quote/2.jpg" alt="Quote image"></li>
+                            <li><img src="assets/img/quote/3.jpg" alt="Quote image"></li>
+                            <li><img src="assets/img/quote/4.jpg" alt="Quote image"></li>
+                            <li><img src="assets/img/quote/5.jpg" alt="Quote image"></li>
+                            <li><img src="assets/img/quote/6.jpg" alt="Quote image"></li>
+                            <li><img src="assets/img/quote/7.jpg" alt="Quote image"></li>
+                            <li><img src="assets/img/quote/8.jpg" alt="Quote image"></li>
+                            <li><img src="assets/img/quote/9.jpg" alt="Quote image"></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-7">
+                    <div class="quote-slider quote-slider1">
+                        <div class="single-item">
+                            <div class="quote">
+                                <i class="fa fa-quote-right"></i>
+                            </div>
+                            <div class="image">
+                                <img src="assets/img/quote/1.png" alt="quote">
+                            </div>
+                            <div class="content">
+                                <p>La verdad el entrenar contigo me ayudo a superar muchos aspectos sobre mi personalidad, quizás de no haber dado el paso no me habria superado a mi misma</p>
+                                <!-- <span class="quote-name">Jhon Due</span>
+                                <p class="quote-pos">Managing Director</p> -->
+                            </div>
+                        </div>
+                        <div class="single-item">
+                            <div class="quote">
+                                <i class="fa fa-quote-right"></i>
+                            </div>
+                            <div class="image"><img src="assets/img/quote/2.jpg" alt="quote"></div>
+                            <div class="content">
+                                <p>Lo que mas me gusto durante los entrenamientos es que nunca me exigiste mas de lo que yo pudiera dar, pero siempre siguiendo un buen ritmo.</p>
+                                <!-- <span class="quote-name">Surunjit Kumar</span>
+                                <p class="quote-pos">Project Manager</p> -->
+                            </div>
+                        </div>
+                        
+                        <div class="single-item">
+                            <div class="quote">
+                                <i class="fa fa-quote-right"></i>
+                            </div>
+                            <div class="image"><img src="assets/img/quote/3.jpg" alt="quote"></div>
+                            <div class="content">
+                                <p>Antes de entrenar contigo no tenia idea de, con que ejercicios comenzar? o si lo que hacia estaba bien o mal. pero cuando comenzamos resolviste muchas de mis dudas y sentí que por fin comenzaba a progresar.</p>
+                                <!-- <span class="quote-name">Sirajul Islam</span>
+                                <p class="quote-pos">Team Leader</p> -->
+                            </div>
+                        </div>
+
+                        <div class="single-item">
+                            <div class="quote">
+                                <i class="fa fa-quote-right"></i>
+                            </div>
+                            <div class="image"><img src="assets/img/quote/4.jpg" alt="quote"></div>
+                            <div class="content">
+                                <p>Le diria que se diera la oportunidad de entrenar contigo ya que rs una persona experimentada y que sabes muy bien lo que haces que se esta perdiendo de un entrenador excelente. </p>
+                                <!-- <span class="quote-name">Janice Mcreaken</span>
+                                <p class="quote-pos">Founder</p> -->
+                            </div>
+                        </div>
+
+                        <div class="single-item">
+                            <div class="quote">
+                                <i class="fa fa-quote-right"></i>
+                            </div>
+                            <div class="image"><img src="assets/img/quote/5.jpg" alt="quote"></div>
+                            <div class="content">
+                                <p>Antes de que me entrenaras, hacia ejercicio en mi casa con video de YouTube, no tenia idea de lo que era la técnica del ejercicio, las repeticiones, cuantas series ni nada, solo buscaba rutinas de la parte que queria trabajar y lo hacia sin obtener progresos y ademas me frustaba.</p>
+                                <!-- <span class="quote-name">Jane Smith</span>
+                                <p class="quote-pos">Managing Director</p> -->
+                            </div>
+                        </div>
+
+                        <div class="single-item">
+                            <div class="quote">
+                                <i class="fa fa-quote-right"></i>
+                            </div>
+                            <div class="image"><img src="assets/img/quote/6.jpg" alt="quote"></div>
+                            <div class="content">
+                                <p>La verdad el entrenar contigo me ayudo a superar muchos aspectos sobre mi personalidad, quizás de no haber dado el paso no me habria superado a mi misma</p>
+                                <!-- <span class="quote-name">Alex Smith</span>
+                                <p class="quote-pos">Managing Director</p> -->
+                            </div>
+                        </div>
+
+                        <div class="single-item">
+                            <div class="quote">
+                                <i class="fa fa-quote-right"></i>
+                            </div>
+                            <div class="image"><img src="assets/img/quote/7.jpg" alt="quote"></div>
+                            <div class="content">
+                                <p>Antes de entrenar contigo no tenia idea de, con que ejercicios comenzar? o si lo que hacia estaba bien o mal. pero cuando comenzamos resolviste muchas de mis dudas y sentí que por fin comenzaba a progresar.</p>
+                                <!-- <span class="quote-name">Jhon Due</span>
+                                <p class="quote-pos">Managing Director</p> -->
+                            </div>
+                        </div>
+
+                        <div class="single-item">
+                            <div class="quote">
+                                <i class="fa fa-quote-right"></i>
+                            </div>
+                            <div class="image"><img src="assets/img/quote/8.jpg" alt="quote"></div>
+                            <div class="content">
+                                <p>Le diria que se diera la oportunidad de entrenar contigo ya que rs una persona experimentada y que sabes muy bien lo que haces que se esta perdiendo de un entrenador excelente.</p>
+                                <!-- <span class="quote-name">Rahul Biswas</span>
+                                <p class="quote-pos">Assistant Director</p> -->
+                            </div>
+                        </div>
+
+                        <div class="single-item">
+                            <div class="quote">
+                                <i class="fa fa-quote-right"></i>
+                            </div>
+                            <div class="image"><img src="assets/img/quote/9.jpg" alt="quote"></div>
+                            <div class="content">
+                                <p>La verdad el entrenar contigo me ayudo a superar muchos aspectos sobre mi personalidad, quizás de no haber dado el paso no me habria superado a mi misma</p>
+                                <!-- <span class="quote-name">Rohit sharma</span>
+                                <p class="quote-pos">Managing Director</p> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+    </div>
 
             <div class="row">
                 <div class="col-lg-12 text-center">
