--- a/index.html
+++ b/index.html
@@ -379,10 +379,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center discovery-title">
-                    <p class="title" style="font-size: 100px;
-      font-weight: 900;
-      margin-bottom: 58px;
-      line-height: 100px;">Tenemos la solución a esta situación</p>
+                    <p class="title" >Tenemos la solución a esta situación</p>
                  
                 </div>
             </div>
