--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                                         <i class="fa fa-quote-right"></i>
                                     </div>
                                     <div class="image">
-                                        <img src="assets/img/quote/1.png" alt="quote">
+                                        <img src="assets/img/quote/1.jpg" alt="quote">
                                     </div>
                                     <div class="content">
                                         <p>La verdad el entrenar contigo me ayudo a superar muchos aspectos sobre mi personalidad, quizás de no haber dado el paso no me habria superado a mi misma</p>
