--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </button>
                 </div>
                 <div class="logo" style="text-align: center;">
-                    <a href="index.html"> <img src="assets/img/logo.png" alt="logo"></a>
+                    <a href="index.html" style="align-content: center;"> <img src="assets/img/logo.png" alt="logo"></a>
                 </div>
                 <!-- <div class="collapse navbar-collapse" id="billatrail_main_menu">
                     <ul class="navbar-nav">
@@ -124,7 +124,7 @@
                         <li><a href="#masterclass">Contacto</a></li>
                     </ul>
                 </div> -->
-                <div class="nav-right-content">
+                <!-- <div class="nav-right-content">
                     <ul class="nav-right-menu">
                        
                         <li>
@@ -145,7 +145,7 @@
                             </div>
                         </li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </nav>
     </div>
@@ -263,12 +263,12 @@
                 <div class="col-xl-12">
                     <div class="discovery-video margin-bottom-25">
                         <div class="video-content">
-                            <div class="btn-wrapper desktop-center">
-                                <a href="https://knov6250.wistia.com/medias/lrvju8jegm" class="btn video-btn">
+                            <div class="btn-wrapper desktop-center btn video-btn">
+                                <!-- <a href="https://knov6250.wistia.com/medias/lrvju8jegm" class="btn video-btn"> -->
 
-                                    <i class="fa fa-play text-left"></i>
+                                    <i class="fa fa-play floating-icon__is floating-icon-message"></i>
 
-                                </a>
+                                <!-- </a> -->
                             </div>
                         </div>
                         <h1 class="page-title">Masterclass</h1>
@@ -611,9 +611,8 @@
                   <div class="col-lg-8 col-md-8 col-xs-12">
                         <div class="footer-widget widget widget_nav_menu">
                             <ul>
-                                <li><a href="#">Como perder peso en 21 dias</a>
-                                <li><a href="#">Masterclass</a></li>
-                                <li><a href="#">Contacto</a></li>
+                                <li>Como perder peso en 21 dias</li>
+                                <li><a href="#masterclass">Masterclass</a></li>
                             </ul>
                         </div>
                   </div>
